[build-system]
requires = ["hatchling", "setuptools", "wheel", "cibuildwheel"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyDMS"]
include = ["pyDMS/**", "README.md", "pyDMS/gdal_data/**"]

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[project]
name = "python-dms"
version = "1.2.1"
license = {file = "LICENSE"}
description = "Python implementation of Data Mining Sharpener (DMS)"
readme = "README.md"
authors = [{ name = "Radoslaw Guzinski", email = "rmgu@dhigroup.com" }]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.10",
  "scikit-learn",
  "scipy",
  "numba",
  "pyproj>2.2.0",
]
keywords = [
  "DMS",
  "data mining sharpener",
  "image sharpening",
  "disaggregation",
  "Remote Sensing"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Programming Language :: Python :: 3"
]

[project.optional-dependencies]
gdal = ["gdal>=3.0.0"]
dev = [
  "build", 
  "pytest", 
  "ruff", 
  "mkdocs", 
  "mkdocstrings[python]", 
  "mkdocs-material",
  "ipykernel"
]
test= ["pytest"]

[tool.ruff]
lint.ignore = ["E501"]

[tool.cibuildwheel]
skip = []
repair-wheel-command = "auditwheel repair {wheel} -w {dest}/"